sumo/tests/netconvert/import/XML/errors/broken_edge/edge#length__false4/errors.netconvert
Error: Attribute 'length' in definition of edge '4' is not of type float.
Quitting (on error).
